--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -13,52 +13,18 @@
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
             <%- include('header.ejs') %>
-                <form action="">
+                <form action="/todos" method="post">
                     <div class="flex gap-2 py-4">
-                        <div class="flex-auto"><input type="text" placeholder="What's next ?"
+                        <div class="flex-auto"><input type="text" name="title" placeholder="What's next ?"
                                 class="border border-gray-300 test-gray-900 w-full rounded p-2 text-sm" required></div>
-                        <div class="flext-auto"><input type="date"
+                        <div class="flext-auto"><input type="date" name="dueDate"
                                 class="border border-gray-300 test-gray-900 w-full rounded p-2 text-sm"></div>
-                        <div class="flex-none"><button type="submit"
+                        <div class="flex-none">
+                            <button type="submit"
                                 class="bg-green-600 px-5 py-2 rounded text-white leading-5 font-medium mr-2 mb">Add</button>
                         </div>
                     </div>
                 </form>
-                <!-- <div>
-                    <h5>Over Due</h5>
-                    <ul class="list-none">
-                        <li class="Todo-Item">
-                            <div class="flex items-center w-fit my-2 py-1 px-2 rounded hover:bg-purple-50 ">
-                                <input type="checkbox" name="" id="checkbox-1"
-                                    class="w-4 h-4 text-blue-600 bg-grey-100 rounded border">
-                                <label for="checkbox-1" class="ml-2 text-sm text-gray-600 cursor-pointer">Have to pay
-                                    electric bill</label>
-                                <a href="" class="hidden trash-icon ml-2"><svg xmlns="http://www.w3.org/2000/svg"
-                                        fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-                                        class="w-4 h-4">
-                                        <path stroke-linecap="round" stroke-linejoin="round"
-                                            d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
-                                    </svg></a>
-                            </div>
-                        </li>
-                        <li class="Todo-Item">
-                            <div class="flex items-center w-fit my-2 py-1 px-2 hover:bg-purple-50 rounded">
-                                <input type="checkbox" name="" id="checkbox-2"
-                                    class="w-4 h-4 text-blue-600 bg-grey-100 rounded border">
-                                <label for="checkbox-2" class="ml-2 text-sm text-gray-600 cursor-pointer">Recharge
-                                    Mobile</label>
-                                <a href="" class="hidden trash-icon ml-2"><svg xmlns="http://www.w3.org/2000/svg"
-                                        fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-                                        class="w-4 h-4">
-                                        <path stroke-linecap="round" stroke-linejoin="round"
-                                            d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
-                                    </svg></a>
-                            </div>
-                        </li>
-                    </ul>
-                    <h5>Due Today</h5>
-                    <h5>Due Later</h5>
-                </div> -->
                 <%- include('todos.ejs') %>
                     <%- include('footer.ejs') %>
         </div>
