--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -4,15 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="csrf-token" content="<%= csrfToken %>">
     <link rel="stylesheet" href="./css/styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
     <script>
+        var token = document
+            .querySelector('meta[name="csrf-token"]')
+            .getAttribute('content')
         function TodoUpdate(id) {
             console.log(id)
             fetch(`/todos/${id}/markAsCompleted`, {
                 method: "put",
                 headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    "_csrf": token,
+                })
             })
                 .then((res) => {
                     window.location.reload();
@@ -24,6 +31,9 @@
             fetch(`/todos/${id}`, {
                 method: "delete",
                 headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    "_csrf": token,
+                })
             })
                 .then((res) => {
                     if (res.ok) {
@@ -43,11 +53,12 @@
         <div class="col-start-3 col-span-2">
             <%- include('header.ejs') %>
                 <form action="/todos" method="post">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken%>">
                     <div class="flex gap-2 py-4">
                         <div class="flex-auto"><input type="text" name="title" placeholder="What's next ?"
                                 class="border border-gray-300 test-gray-900 w-full rounded p-2 text-sm" required></div>
                         <div class="flext-auto"><input type="date" name="dueDate"
-                                class="border border-gray-300 test-gray-900 w-full rounded p-2 text-sm"></div>
+                                class="border border-gray-300 test-gray-900 w-full rounded p-2 text-sm" required></div>
                         <div class="flex-none">
                             <button type="submit"
                                 class="bg-green-600 px-5 py-2 rounded text-white leading-5 font-medium mr-2 mb">Add</button>
