--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -35,7 +35,7 @@
             </li>
             <%} %>
     </ul>
-    <div class="flex py-5">
+    <div class="flex">
         <h5>Due Today</h5>
         <p class="mx-2 px-2 bg-gray-300 rounded" id="count-due-today">
             <%= duetoday.length %>
@@ -88,7 +88,7 @@
                 </div>
             </li>
             <%} %>
-                <div class="flex py-5">
+                <div class="flex">
                     <h5>Completed Items</h5>
                     <p class="mx-2 px-2 bg-gray-300 rounded" id="count-due-today">
                         <%= competed.length %>
