--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -72,10 +72,10 @@
         <% for(var i=0; i<duelater.length; i++) {%>
             <li class="Todo-Item">
                 <div class="flex items-center w-fit my-2 py-1 px-2 rounded hover:bg-purple-50 ">
-                    <input type="checkbox" name="" id="count-completed-<%= i %>"
+                    <input type="checkbox" name="" id="count-due-later<%= i %>"
                         onclick="TodoUpdate(<%= duelater[i].id %>)" <%=duelater[i].completed ? "checked" : "" %>
                     class="w-4 h-4 text-blue-600 bg-grey-100 rounded border">
-                    <label for="count-completed-<%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer">
+                    <label for="count-due-later<%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer">
                         <%= duelater[i].title %>
                     </label>
                     <a href="" class="hidden trash-icon ml-2" onclick="deleteTodo(<%= duelater[i].id %>)">
@@ -98,11 +98,11 @@
                     <% for(var i=0; i<competed.length; i++) {%>
                         <li class="Todo-Item">
                             <div class="flex items-center w-fit my-2 py-1 px-2 rounded hover:bg-purple-50 ">
-                                <input type="checkbox" name="" id="count-due-later-<%= i %>"
+                                <input type="checkbox" name="" id="count-completed<%= i %>"
                                     onclick="TodoUpdate(<%= competed[i].id %>)" <%=competed[i].completed ? "checked"
                                     : "" %>
                                 class="w-4 h-4 text-blue-600 bg-grey-100 rounded border">
-                                <label for="count-due-later-<%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer">
+                                <label for="count-completed<%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer">
                                     <%= competed[i].title %>
                                 </label>
                                 <a href="" class="hidden trash-icon ml-2" onclick="deleteTodo(<%= competed[i].id %>)">
