--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -45,10 +45,10 @@
         <% for(var i=0; i<duetoday.length; i++) {%>
             <li class="Todo-Item">
                 <div class="flex items-center w-fit my-2 py-1 px-2 rounded hover:bg-purple-50 ">
-                    <input type="checkbox" name="" id="count-due-today-<%= i %>"
+                    <input type="checkbox" name="" id="count-due-today<%= i %>"
                         onclick="TodoUpdate(<%= duetoday[i].id %>)" <%=duetoday[i].completed ? "checked" : "" %>
                     class="w-4 h-4 text-blue-600 bg-grey-100 rounded border">
-                    <label for="count-due-today-<%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer">
+                    <label for="count-due-today<%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer">
                         <%= duetoday[i].title %>
                     </label>
                     <a href="" class="hidden trash-icon ml-2" onclick="deleteTodo(<%= duetoday[i].id %>)">
