--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -95,7 +95,7 @@
             <%} %>
                 <div class="flex">
                     <h5>Completed Items</h5>
-                    <p class="mx-2 px-2 bg-gray-300 rounded" id="count-completed
+                    <p class="mx-2 px-2 bg-gray-300 rounded" id="count-completed"
                         <%= competed.length %>
                     </p>
                 </div>
