--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -7,66 +7,16 @@
     <meta name="csrf-token" content="<%= csrfToken %>">
     <link rel="stylesheet" href="./css/styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
-    <script>
-        var token = document
-            .querySelector('meta[name="csrf-token"]')
-            .getAttribute('content')
-        function TodoUpdate(id) {
-            console.log(id)
-            fetch(`/todos/${id}`, {
-                method: "put",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({
-                    "_csrf": token,
-                })
-            })
-                .then((res) => {
-                    window.location.reload();
-                })
-                .catch((err) => console.error(err))
-        };
-        function deleteTodo(id) {
-            console.log(id)
-            fetch(`/todos/${id}`, {
-                method: "delete",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({
-                    "_csrf": token,
-                })
-            })
-                .then((res) => {
-                    if (res.ok) {
-                        window.location.reload();
-                    }
-                })
-                .catch((err) => console.log(err))
-        }
-        function hello() {
-            console.log("hello")
-        }
-    </script>
+    <title>Todo application</title>
 </head>
 
 <body>
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
             <%- include('header.ejs') %>
-                <form action="/todos" method="post">
-                    <input type="hidden" name="_csrf" value="<%= csrfToken%>">
-                    <div class="flex gap-2 py-4">
-                        <div class="flex-auto"><input type="text" name="title" placeholder="What's next ?"
-                                class="border border-gray-300 test-gray-900 w-full rounded p-2 text-sm" required></div>
-                        <div class="flext-auto"><input type="date" name="dueDate"
-                                class="border border-gray-300 test-gray-900 w-full rounded p-2 text-sm" required></div>
-                        <div class="flex-none">
-                            <button type="submit"
-                                class="bg-green-600 px-5 py-2 rounded text-white leading-5 font-medium mr-2 mb">Add</button>
-                        </div>
-                    </div>
-                </form>
-                <%- include('todos.ejs') %>
-                    <%- include('footer.ejs') %>
+                <p class="py-2">Welcome to Todo Manager</p>
+                <p class="py-2">New here ? <a href="/signup" class="text-green-600 px-1">Sign-Up now</a></p>
+                <p class="py-2">Alreay have an account ?<a href="/login" class="text-green-600 px-1">Sign-in</a></p>
         </div>
 
     </div>
