--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Todo application</title>
 </head>
 
 <body>
@@ -18,13 +18,10 @@
         <% for(var i=0; i<overdue.length; i++) {%>
             <li class="Todo-Item">
                 <div class="flex items-center w-fit my-2 py-1 px-2 rounded hover:bg-purple-50 ">
-<<<<<<< HEAD
                     <input type="checkbox" name="" id="count-overdue<%= i %>" onclick="TodoUpdate(<%= overdue[i].id %>)"
                         <%=overdue[i].completed ? "checked" : "" %>
-=======
-                    <input type="checkbox" name="" id="count-overdue<%= i %>"
-                        onclick="TodoUpdate(<%= overdue[i].id %>)" <%=overdue[i].completed ? "checked" : "" %>
->>>>>>> 479caa7f61c5fc88db0e03cde6fcdfa6e10dfccd
+                    <input type="checkbox" name="" id="count-overdue<%= i %>" onclick="TodoUpdate(<%= overdue[i].id %>)"
+                        <%=overdue[i].completed ? "checked" : "" %>
                     class="w-4 h-4 text-blue-600 bg-grey-100 rounded border">
                     <label for="count-overdue<%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer">
                         <%= overdue[i].title %>
@@ -95,34 +92,32 @@
             <%} %>
                 <div class="flex">
                     <h5>Completed Items</h5>
-                    <p class="mx-2 px-2 bg-gray-300 rounded" id="count-completed
-                        <%= competed.length %>
+                    <p class="mx-2 px-2 bg-gray-300 rounded" id="count-completed">
+                        <%=competed.length %>
                     </p>
                 </div>
                 <ul class=" list-none">
-                        <% for(var i=0; i<competed.length; i++) {%>
-                            <li class="Todo-Item">
-                                <div class="flex items-center w-fit my-2 py-1 px-2 rounded hover:bg-purple-50 ">
-                                    <input type="checkbox" name="" id="count-completed<%= i %>"
-                                        onclick="TodoUpdate(<%= competed[i].id %>)" <%=competed[i].completed ? "checked"
-                                        : "" %>
-                                    class="w-4 h-4 text-blue-600 bg-grey-100 rounded border">
-                                    <label for="count-completed<%= i %>"
-                                        class="ml-2 text-sm text-gray-600 cursor-pointer">
-                                        <%= competed[i].title %>
-                                    </label>
-                                    <a href="" class="hidden trash-icon ml-2"
-                                        onclick="deleteTodo(<%= competed[i].id %>)">
-                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                            stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
-                                            <path stroke-linecap="round" stroke-linejoin="round"
-                                                d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
-                                        </svg>
-                                    </a>
-                                </div>
-                            </li>
-                            <%} %>
-    </ul>
+                    <% for(var i=0; i<competed.length; i++) {%>
+                        <li class="Todo-Item">
+                            <div class="flex items-center w-fit my-2 py-1 px-2 rounded hover:bg-purple-50 ">
+                                <input type="checkbox" name="" id="count-completed<%= i %>"
+                                    onclick="TodoUpdate(<%= competed[i].id %>)" <%=competed[i].completed ? "checked"
+                                    : "" %>
+                                class="w-4 h-4 text-blue-600 bg-grey-100 rounded border">
+                                <label for="count-completed<%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer">
+                                    <%= competed[i].title %>
+                                </label>
+                                <a href="" class="hidden trash-icon ml-2" onclick="deleteTodo(<%= competed[i].id %>)">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                        stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+                                        <path stroke-linecap="round" stroke-linejoin="round"
+                                            d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                                    </svg>
+                                </a>
+                            </div>
+                        </li>
+                        <%} %>
+                </ul>
 </body>
 
 </html>
