--- a/todo-app/views/signup.ejs
+++ b/todo-app/views/signup.ejs
@@ -15,32 +15,33 @@
             <%- include('header.ejs') %>
                 <h6 class="py-4">Sign Up as a new user</h6>
                 <form action="/users" method="post">
-                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                    <div class="py-2">
-                        <label for="firstName">First Name: </label>
-                        <input type="text" name="firstName" id="firstName"
-                            class="rounded font-medium w-full my-1 p-2 border border-gray-600">
-                    </div>
-                    <div class="py-2">
-                        <label for="lastName">Last Name: </label>
-                        <input type="text" name="lastName" id="lastName"
-                            class="rounded font-medium w-full my-1 p-2 border border-gray-600">
-                    </div>
-                    <div class="py-2">
-                        <label for="email">Email: </label>
-                        <input type="email" name="email" id="email"
-                            class="rounded font-medium w-full my-1 p-2 border border-gray-600">
-                    </div>
-                    <div class="py-2">
-                        <label for="password">Password: </label>
-                        <input type="password" name="password" id="password"
-                            class="rounded font-medium w-full my-1 p-2 border border-gray-600">
-                    </div>
-                    <div class="py-2">
-                        <button type="submit"
-                            class="rounded text-white bg-green-600 py-2 px-5 hover:bg-green-900 font-medium">Sign
-                            Up</button>
-                    </div>
+                    <%- include('notifications.ejs') %>
+                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                        <div class="py-2">
+                            <label for="firstName">First Name: </label>
+                            <input type="text" name="firstName" id="firstName"
+                                class="rounded font-medium w-full my-1 p-2 border border-gray-600">
+                        </div>
+                        <div class="py-2">
+                            <label for="lastName">Last Name: </label>
+                            <input type="text" name="lastName" id="lastName"
+                                class="rounded font-medium w-full my-1 p-2 border border-gray-600">
+                        </div>
+                        <div class="py-2">
+                            <label for="email">Email: </label>
+                            <input type="email" name="email" id="email"
+                                class="rounded font-medium w-full my-1 p-2 border border-gray-600">
+                        </div>
+                        <div class="py-2">
+                            <label for="password">Password: </label>
+                            <input type="password" name="password" id="password"
+                                class="rounded font-medium w-full my-1 p-2 border border-gray-600">
+                        </div>
+                        <div class="py-2">
+                            <button type="submit"
+                                class="rounded text-white bg-green-600 py-2 px-5 hover:bg-green-900 font-medium">Sign
+                                Up</button>
+                        </div>
                 </form>
         </div>
     </div>
