--- a/todo-app/views/todo.ejs
+++ b/todo-app/views/todo.ejs
@@ -4,75 +4,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="csrf-token" content="<%= csrfToken %>">
-    <link rel="stylesheet" href="./css/styles.css">
-    <script src="https://cdn.tailwindcss.com"></script>
     <title>Todo application</title>
-    <script>
-        var token = document
-            .querySelector('meta[name="csrf-token"]')
-            .getAttribute('content')
-        function TodoUpdate(id) {
-            // console.log(id)
-            fetch(`/todos/${id}`, {
-                method: "put",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({
-                    "_csrf": token,
-                })
-            })
-                .then((res) => {
-                    window.location.reload();
-                })
-                .catch((err) => console.error(err))
-        };
-        function deleteTodo(id) {
-            console.log("Deleting Todo", id)
-            fetch(`/todos/${id}`, {
-                method: "delete",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({
-                    "_csrf": token,
-                })
-            })
-                .then((res) => {
-                    if (res.ok) {
-                        window.location.reload();
-                    }
-                })
-                .catch((err) => console.log(err))
-        }
-    </script>
 </head>
 
 <body>
-    <div class="grid grid-cols-6">
-        <div class="col-start-3 col-span-2">
-            <%- include('header.ejs') %>
-                <form action="/todos" method="post">
-                    <%- include('notifications.ejs') %>
-                        <input type="hidden" name="_csrf" value="<%= csrfToken%>">
-                        <div class="flex gap-2 py-4">
-                            <div class="flex-auto"><input type="text" name="title" placeholder="What's next ?"
-                                    class="border border-gray-300 test-gray-900 w-full rounded p-2 text-sm">
-                            </div>
-                            <div class="flext-auto"><input type="date" name="dueDate"
-                                    class="border border-gray-300 test-gray-900 w-full rounded p-2 text-sm">
-                            </div>
-                            <div class="flex-none">
-                                <button type="submit"
-                                    class="bg-green-600 px-5 py-2 rounded text-white leading-5 font-medium mr-2 mb">Add</button>
-                            </div>
-                        </div>
-                </form>
-                <%- include('todos.ejs') %>
-                    <%- include('footer.ejs') %>
-                        <button id="/signout" type="submit" onclick="window.location.href='/signout'"
-                            class="bg-red-500 rounded px-4 py-2 text-white">
-                            signout</button>
-        </div>
-
+    <div class="flex">
+        <h5>Overdue</h5>
+        <p class="mx-2 px-2 bg-gray-300 rounded" id="count-overdue">
+            <%= overdue.length %>
+        </p>
     </div>
+    <ul class="list-none">
+        <% for(var i=0; i<overdue.length; i++) {%>
+            <li class="Todo-Item">
+                <div class="flex items-center w-fit my-2 py-1 px-2 rounded hover:bg-purple-50 ">
+                    <input type="checkbox" name="title" id="count-overdue<%= i %>"
+                        onclick="TodoUpdate(<%= overdue[i].id %>)" <%=overdue[i].completed ? "checked" : "" %>
+                    class="w-4 h-4 text-blue-600 bg-grey-100 rounded border">
+                    <label for="count-overdue<%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer">
+                        <%= overdue[i].title %>
+                    </label>
+                    <a href="" class="hidden trash-icon ml-2 cursor-default" onclick="deleteTodo(<%= overdue[i].id %>)">
+                        <svg xmlns=" http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-4 h-4">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                        </svg>
+                    </a>
+                </div>
+            </li>
+            <%} %>
+    </ul>
+    <div class="flex">
+        <h5>Due Today</h5>
+        <p class="mx-2 px-2 bg-gray-300 rounded" id="count-due-today">
+            <%= duetoday.length %>
+        </p>
+    </div>
+    <ul class="list-none">
+        <% for(var i=0; i<duetoday.length; i++) {%>
+            <li class="Todo-Item">
+                <div class="flex items-center w-fit my-2 py-1 px-2 rounded hover:bg-purple-50 ">
+                    <input type="checkbox" name="title" id="count-due-today<%= i %>"
+                        onclick="TodoUpdate(<%= duetoday[i].id %>)" <%=duetoday[i].completed ? "checked" : "" %>
+                    class="w-4 h-4 text-blue-600 bg-grey-100 rounded border">
+                    <label for="count-due-today<%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer">
+                        <%= duetoday[i].title %>
+                    </label>
+                    <a href="" class="hidden trash-icon ml-2" onclick="deleteTodo(<%= duetoday[i].id %>)">
+                        <svg xmlns=" http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-4 h-4">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                        </svg>
+                    </a>
+                </div>
+            </li>
+            <%} %>
+    </ul>
+    <div class="flex">
+        <h5>Due Later</h5>
+        <p class="mx-2 px-2 bg-gray-300 rounded" id="count-due-later">
+            <%= duelater.length %>
+        </p>
+    </div>
+    <ul class="list-none">
+        <% for(var i=0; i<duelater.length; i++) {%>
+            <li class="Todo-Item">
+                <div class="flex items-center w-fit my-2 py-1 px-2 rounded hover:bg-purple-50 ">
+                    <input type="checkbox" name="title" id="count-due-later<%= i %>"
+                        onclick="TodoUpdate(<%= duelater[i].id %>)" <%=duelater[i].completed ? "checked" : "" %>
+                    class="w-4 h-4 text-blue-600 bg-grey-100 rounded border">
+                    <label for="count-due-later<%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer">
+                        <%= duelater[i].title %>
+                    </label>
+                    <a href="" class="hidden trash-icon ml-2" onclick="deleteTodo(<%= duelater[i].id %>)">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-4 h-4">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                        </svg>
+                    </a>
+                </div>
+            </li>
+            <%} %>
+                <div class="flex">
+                    <h5>Completed Items</h5>
+                    <p class="mx-2 px-2 bg-gray-300 rounded" id="count-completed">
+                        <%=competed.length %>
+                    </p>
+                </div>
+                <ul class=" list-none">
+                    <% for(var i=0; i<competed.length; i++) {%>
+                        <li class="Todo-Item">
+                            <div class="flex items-center w-fit my-2 py-1 px-2 rounded hover:bg-purple-50 ">
+                                <input type="checkbox" name="title" id="count-completed<%= i %>"
+                                    onclick="TodoUpdate(<%= competed[i].id %>)" <%=competed[i].completed ? "checked"
+                                    : "" %>
+                                class="w-4 h-4 text-blue-600 bg-grey-100 rounded border">
+                                <label for="count-completed<%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer">
+                                    <%= competed[i].title %>
+                                </label>
+                                <a href="" class="hidden trash-icon ml-2" onclick="deleteTodo(<%= competed[i].id %>)">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                        stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+                                        <path stroke-linecap="round" stroke-linejoin="round"
+                                            d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                                    </svg>
+                                </a>
+                            </div>
+                        </li>
+                        <%} %>
+                </ul>
 </body>
 
 </html>
