--- a/todo-app/views/todo.ejs
+++ b/todo-app/views/todo.ejs
@@ -9,22 +9,25 @@
 
 <body>
     <div class="flex">
-        <h5>Overdue</h5>
-        <p class="mx-2 px-2 bg-gray-300 rounded" id="count-overdue">
-            <%= overdue.length %>
+        <h5>
+            <%= title %>
+        </h5>
+        <p class="mx-2 px-2 bg-gray-300 rounded" id="todoId">
+            <%= todoArray.length %>
         </p>
     </div>
     <ul class="list-none">
-        <% for(var i=0; i<overdue.length; i++) {%>
+        <% for(let i=0; i<todoArray.length; i++) {%>
             <li class="Todo-Item">
                 <div class="flex items-center w-fit my-2 py-1 px-2 rounded hover:bg-purple-50 ">
-                    <input type="checkbox" name="title" id="count-overdue<%= i %>"
-                        onclick="TodoUpdate(<%= overdue[i].id %>)" <%=overdue[i].completed ? "checked" : "" %>
+                    <input type="checkbox" name="title" id="<%= todoId%><%= i %>"
+                        onclick="TodoUpdate(<%= todoArray[i].id %>)" <%=todoArray[i].completed ? "checked" : "" %>
                     class="w-4 h-4 text-blue-600 bg-grey-100 rounded border">
-                    <label for="count-overdue<%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer">
-                        <%= overdue[i].title %>
+                    <label for="<%= todoId%><%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer">
+                        <%= todoArray[i].title %>
                     </label>
-                    <a href="" class="hidden trash-icon ml-2 cursor-default" onclick="deleteTodo(<%= overdue[i].id %>)">
+                    <a href="" class="hidden trash-icon ml-2 cursor-default"
+                        onclick="deleteTodo(<%= todoArray[i].id %>)">
                         <svg xmlns=" http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="w-4 h-4">
                             <path stroke-linecap="round" stroke-linejoin="round"
@@ -35,7 +38,7 @@
             </li>
             <%} %>
     </ul>
-    <div class="flex">
+    <!-- <div class="flex">
         <h5>Due Today</h5>
         <p class="mx-2 px-2 bg-gray-300 rounded" id="count-due-today">
             <%= duetoday.length %>
@@ -115,7 +118,7 @@
                             </div>
                         </li>
                         <%} %>
-                </ul>
+                </ul> -->
 </body>
 
 </html>
