--- a/todo-app/views/todo.ejs
+++ b/todo-app/views/todo.ejs
@@ -12,7 +12,7 @@
         <h5>
             <%= title %>
         </h5>
-        <p class="mx-2 px-2 bg-gray-300 rounded" id="todoId">
+        <p class="mx-2 px-2 bg-gray-300 rounded" id="<%= todoId%>">
             <%= todoArray.length %>
         </p>
     </div>
