--- a/todo-app/views/todo.ejs
+++ b/todo-app/views/todo.ejs
@@ -20,8 +20,9 @@
         <% for(let i=0; i<todoArray.length; i++) {%>
             <li class="Todo-Item">
                 <div class="flex items-center w-fit my-2 py-1 px-2 rounded hover:bg-purple-50 ">
-                    <input type="checkbox" name="title" id="<%= todoId%><%= i %>"
-                        onclick="TodoUpdate(<%= todoArray[i].id %>)" <%=todoArray[i].completed ? "checked" : "" %>
+                    <input type="checkbox" class="w-4 h-4 text-blue-600 bg-grey-100 rounded border" name="title"
+                        id="<%= todoId%><%= i %>" onclick="TodoUpdate(<%= todoArray[i].id %>)" <%=todoArray[i].completed
+                        ? "checked" : "" %>
                     class="w-4 h-4 text-blue-600 bg-grey-100 rounded border">
                     <label for="<%= todoId%><%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer">
                         <%= todoArray[i].title %>
