--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -54,10 +54,10 @@
                         <input type="hidden" name="_csrf" value="<%= csrfToken%>">
                         <div class="flex gap-2 py-4">
                             <div class="flex-auto"><input type="text" name="title" placeholder="What's next ?"
-                                    class="border border-gray-300 test-gray-900 w-full rounded p-2 text-sm">
+                                    class="border border-gray-300 test-gray-900 w-full rounded p-2 text-sm" required>
                             </div>
                             <div class="flext-auto"><input type="date" name="dueDate"
-                                    class="border border-gray-300 test-gray-900 w-full rounded p-2 text-sm">
+                                    class="border border-gray-300 test-gray-900 w-full rounded p-2 text-sm" required>
                             </div>
                             <div class="flex-none">
                                 <button type="submit"
