--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -72,7 +72,7 @@
                             <%- include('todo.ejs', {title: "Completed" , todoArray: completed,
                                 todoId: "count-completed" }) %>
                                 <%- include('footer.ejs') %>
-                                    <button id="/signout" type="submit" onclick="window.location.href='/signout'"
+                                    <button id="/signout" onclick="window.location.href='/signout'"
                                         class="bg-red-500 rounded px-4 py-2 text-white">
                                         signout</button>
         </div>
